# node-server-app/api/routes/user.js
@@ -1,7 +1,8 @@
 const express = require("express")
 const router = express.Router()
+const checkAuth = require("../auth/auth")
 const { userSignUpValidator, userLoginValidator, refreshTokenValidator, loginWithFacebookValidator } = require("../validators/userValidator")
-const { userSignUp, userLogin, refreshToken, loginWithFacebook } = require("../controllers/userController")
+const { userSignUp, userLogin, refreshToken, loginWithFacebook, getUserInfo } = require("../controllers/userController")
 
 // routes below
 // params: router.<http_method>(path, authValidator?, dataValidator?, method)
@@ -9,5 +10,7 @@ router.post("/signup", userSignUpValidator, userSignUp)
 router.post("/login", userLoginValidator, userLogin)
 router.post("/refresh-token", refreshTokenValidator, refreshToken)
 router.post("/login-facebook", loginWithFacebookValidator, loginWithFacebook)
+router.get("/:userId", checkAuth, getUserInfo)
+
 
 module.exports = router
